# cilqr

ilqr_planner/: CMakeLists.txt  package.xml
ilqr_planner/config/: cilqr_planner.yaml  ilqr_planner.yaml
ilqr_planner/include/: cilqr_planner.hpp  cilqr_solver.hpp  ilqr_optimizer.h  ilqr_path_optimizer.h  ilqr_path_planner.h  ilqr_planner.h  optimizer_interface.h  optimizer_utils.h  rs_path.h  type.hpp
ilqr_planner/launch/: cilqr_planner.py  ilqr_planner.py
ilqr_planner/src/: cilqr_node.cpp  cilqr_planner.cpp  cilqr_solver.cpp  ilqr_optimizer.cpp  ilqr_path_optimizer.cpp  ilqr_path_planner.cpp  ilqr_planner.cpp  optimizer_node.cpp  optimizer_utils.cpp  rs_path.cpp
ilqr_planner/tests/: ros_test_optimizer.cpp  test_ilqr_path_planner.cpp  test_optimizer.cpp  test_rs_path.cpp
mpc_msgs/: CMakeLists.txt  package.xml
mpc_msgs/msg/: AckermannLateralCommand.msg  ControlCommandStamped.msg  Direction.msg  Float32MultiArrayStamped.msg  HybridLane.msg  HybridTrajectory.msg  MultiArrayLayout.msg  Path.msg  PathPoint.msg  PathPointWithLaneId.msg  PathWithLaneId.msg  Paths.msg  SteeringReport.msg  Trajectory.msg  TrajectoryPoint.msg  VehicleOdometry.msg  VehicleState.msg  VehicleStatus.msg
sim_robot/: CMakeLists.txt  package.xml
sim_robot/include/: bicycle_kinematics.hpp  coor_tools2.hpp  sim_ackermann.hpp  sim_vehicle.h
sim_robot/src/: bicycle_kinematics.cpp  sim_ackermann.cpp  sim_node.cpp  sim_vehicle.cpp
utils_tool/: CMakeLists.txt  package.xml
utils_tool/config/: generate_path.yaml  sim_robot.yaml
utils_tool/data/: 2024-04-19-18-22-06-258.txt  2024-04-19-18-22-58-545.txt
utils_tool/include/: bezier_plan.h  coor_tools.h  path_generator.hpp  rs_path.h  type.hpp  visualization_tool.hpp
utils_tool/include/3rd/: backward.hpp
utils_tool/launch/: sim_robot.py  simulate_enviroment.py
utils_tool/rviz/: rviz.rviz
utils_tool/src/: bezier_plan.cpp  coor_tools.cpp  path_generator.cpp  path_generator_node.cpp  rs_path.cpp  tsb_coor_trans.cpp  visualization_node.cpp  visualization_tool.cpp
utils_tool/test/: test_coor_trans.cpp
vehicle_model/: CMakeLists.txt  package.xml
vehicle_model/include/: sim_robot.h  vehicle_model_bicycle_lateral_error_state.h  vehicle_model_bicycle_rear_drive_five_state.h  vehicle_model_bicycle_rear_drive_four_state.h  vehicle_model_bicycle_rear_drive_three_state.h  vehicle_model_diff_four_state.h  vehicle_model_diff_three_state.h  vehicle_model_interface.h  vehicle_state_ackermann.h  vehicle_state_diff.h  vehicle_state_interface.h
vehicle_model/src/: sim_robot.cpp  vehicle_model_bicycle_rear_drive_five_state.cpp  vehicle_model_bicycle_rear_drive_four_state.cpp  vehicle_model_bicycle_rear_drive_three_state.cpp  vehicle_model_diff_four_state.cpp  vehicle_model_diff_three_state.cpp  vehicle_model_interface.cpp
